--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="content">
              <blockquote>My thrist for knowledge is unending.</blockquote>
             <p>
-              As a self-taught web designer, creative writer, sketch artist and a swimmer, it is my strong belief that one should keep on learning throughout life. No number of skills are too many and no knowledge is too great, there's always more out there and if you won't grab it, someone else will. 
+              As a self-taught web developer, creative writer, sketch artist and a swimmer, it is my strong belief that one should keep on learning throughout life. No number of skills are too many and no knowledge is too great, there's always more out there and if you won't grab it, someone else will. 
             </p>
             <p>
               I have a very diverse plethora of skills at my disposal, which I've been collecting for a long, long time. Who would've thought that I would be using my writing skills here? Maybe tomorrow I'll have to swim an ocean....
